k8s/base/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mahi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mahi-backend

  template:
    metadata:
      labels:
        app: mahi-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"

    spec:
      containers:
        - name: backend
          image: rameshcloud/mahi-backend:v2.3.3   # 🔴 FORCE NEW TAG
          imagePullPolicy: Always                  # 🔴 FORCE PULL
          ports:
            - containerPort: 8000
  strategy:
    canary:
      stableService: mahi-backend
      canaryService: mahi-backend-canary
      steps:
        - setWeight: 100
