k8s/base/backend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahi-backend-canary
spec:
  selector:
    app: mahi-backend
  ports:
    - port: 8000
      targetPort: 8000
