k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahi-backend
spec:
  selector:
    app: mahi-backend
  ports:
    - port: 8000
      targetPort: 8000
