k8s/base/frontend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahi-frontend-canary
spec:
  selector:
    app: mahi-frontend
  ports:
    - port: 80
      targetPort: 80
