k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahi-frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  selector:
    app: mahi-frontend
  ports:
    - port: 80
      targetPort: 80
