k8s/base/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahi-ai-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mahi-ai.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahi-frontend
                port:
                  number: 80
